# peppertrace

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
abstract_demo_recorder/: DemoRecorder.py  abstractDataLogger.py  abstractInformationDisplay.py
config/: recorder_configuration.json
demonstration_gui/: CMakeLists.txt  README.md
demonstration_gui/config/: demonstration_gui_configuration.json
demonstration_gui/data/: demonstration_gui_topics.json
demonstration_gui/launch/: demonstration_gui.launch
demonstration_gui/src/: demonstration_gui_application.py  demonstration_gui_elements.py  demonstration_gui_elements_implementation.py  demonstration_gui_logic_implementation.py  demonstration_gui_ros_interface_implementation.py  peppertrace.ui
demonstration_recorder/: CMakeLists.txt  README.md
demonstration_recorder/config/: demonstration_recorder_configuration.json
demonstration_recorder/data/: demonstration_recorder_topics.json
demonstration_recorder/launch/: demonstration_recorder.launch  programming_by_demonstration.launch
demonstration_recorder/src/: demonstration_recorder_application.py  demonstration_recorder_data_logger_implementation.py  demonstration_recorder_demo_recorder_implementation.py  demonstration_recorder_information_display_implementation.py  demonstration_recorder_replay_implementation.py  demonstration_recorder_robot_event_handler_implementation.py  demonstration_recorder_rosbag_recorder_implementation.py  demonstration_recorder_states_and_events_implementation.py  demonstration_recorder_stub.py  demonstration_recorder_user_input_handler_implementation.py
launch/: shadowing_system.launch
pepper_data_processing/: bag_reader.py
pepper_demonstration_recorder/: pepperDataLogger.py  pepperInformationDisplay.py  pepperRecordingApplication.py  pepperRobotEventHandler.py  pepperUserInputHandler.py
skeletal_model/: CMakeLists.txt  README.md
skeletal_model/config/: skeletal_model_configuration.json
skeletal_model/data/: skeletal_model_topics.json
skeletal_model/demos/: skeletal_model.py
skeletal_model/launch/: skeletal_model.launch
skeletal_model/others/: get_intrinsics.py  image_publisher_node.py  minimize_jerk_application.py  minimize_jerk_implementation.py  realsense_image_publisher.py
skeletal_model/src/: skeletal_model_application.py  skeletal_model_estimation_implementation.py  skeletal_model_filters_implementation.py  skeletal_model_retargeting_implementation.py  skeletal_model_stub.py
src/: test.py
src/abstract_demo_recorder/: abstractRobotEventHandler.py  abstractUserInputHandler.py
src/pepper_data_processing/: bag_reader.py  bag_rescaler.py  minimize_jerk.py
src/pepper_demonstration_recorder/: pepperDataLogger.py  pepperInformationDisplay.py  pepperRecordingApplication.py  pepperRobotEventHandler.py  pepperUserInputHandler.py  rosBagRecorder.py
