<package format="2">
  <name>programming_by_demonstration</name>
  <version>0.1.0</version>
  <description>Package for programming from demonstration</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Ensure catkin is listed as a build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add all dependencies needed by the subcomponents -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Add additional dependencies as needed -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Additional export details if required -->
  </export>
</package>
